--- a/src/renderer/sass/pages/_ele-style.scss
+++ b/src/renderer/sass/pages/_ele-style.scss
@@ -52,3 +52,10 @@
 .dialogButtonBox{
 	padding:0 0 1rem;
 }
+
+.el-table td, .el-table th{
+	padding:6px 0;
+}
+ .el-table th{
+	background:#ebeef5;
+}
