--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,14 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- <meta http-equiv="Access-Control-Allow-Origin" content="http://10.144.238.103:8080"> -->
     <title>dcs_front_end 测试环境</title>
+    <script>
+      // 重命名 Electron 提供的 require
+      window.nodeRequire = require;
+      window.nodeModule = module;
+      // delete window.require;
+      // delete window.exports;
+      // delete window.module;
+    </script>
     <script src="static/js/jquery.v3.2.1.min.js"></script>
     <script src="static/js/polyfill.min.js"></script>
     <script src="static/js/lodash.min.js"></script>
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
       <script>
-        require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
+        nodeRequire('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
       </script>
     <% } %>
   </head>
@@ -17,7 +26,7 @@
     <div id="app"></div>
     <!-- Set `__static` path to static files in production -->
     <script>
-      if (process.env.NODE_ENV !== 'development') window.__static = require('path').join(__dirname, '/static').replace(/\\/g, '\\\\')
+      if (process.env.NODE_ENV !== 'development') window.__static = nodeRequire('path').join(__dirname, '/static').replace(/\\/g, '\\\\')
     </script>
     
 
