--- a/src/renderer/sass/base/_base.scss
+++ b/src/renderer/sass/base/_base.scss
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h4, h6 {
 }
 .iconfont {
   font-family: "iconfont" !important;
-  font-size: 2rem;
+  font-size: 2.4rem;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   // -webkit-text-stroke-width: 0.2px;
@@ -138,7 +138,9 @@ h1, h2, h3, h4, h4, h6 {
   @extend %display;
   @extend %vam;
 }
-
+.pt30{
+  padding-top:3rem;
+}
 .mb44 {
   margin-bottom: 44px;
 }
@@ -166,4 +168,9 @@ h1, h2, h3, h4, h4, h6 {
 }
 .relative{
   @extend %relative;
+}
+.dsc-fl{@extend %float}
+.dsc-fr{float: right;}
+.w60{
+  width:60%;
 }
