--- a/src/renderer/sass/base/_header.scss
+++ b/src/renderer/sass/base/_header.scss
@@ -85,29 +85,31 @@
     @extend %textAlign;
     a{display: block;}
     &:hover,&.navChildCurrent{
-      background:#4294f7;
       color:#fff;
-      em,p{
-        color:#fff;
-      }
       .icon-header-open{
         color:#fff;
       }
+      em{
+        color:#fff;
+        background:#66b1ff;
+      }
     }
     em{
-      // width:2.4rem;
-      @include height(true, 3rem, 3rem);
-      padding:0 0.5rem;
+      width:3.4rem;
+      @include height(true, 3.8rem, 3.8rem);
+      // padding:0 0.5rem;
       color:#fff;
       background:#4294f7;
       border-radius:0.3rem;
+      @extend %textAlign;
       &.icon-header-open{
         color:#fff;
-        background:#34af47;
+        // background:#34af47;
       }
     }
     p{
       line-height: 2.4rem;
+      font-size:1.2rem;
     }
   }
 }
