--- a/src/renderer/sass/pages/_pages.scss
+++ b/src/renderer/sass/pages/_pages.scss
@@ -146,3 +146,29 @@
  	right:2rem;
  	top:36%;
  }
+
+ .dcs-editor-force{
+ 	height: 2rem;
+ 	@extend %absolute;
+ 	top:0.5rem;
+ 	let:-0.6rem;
+ 	z-index:2;
+ }
+ .dcs-text-force{
+ 	@extend %relative;
+ 	z-index:1;
+ }
+ .variableSearchBox{
+ 	background:#fff;
+ 	padding:1.2rem 1.5rem;
+ 	text-align: center;
+ }
+ .dcs-no-data{
+ 	padding:3rem 0;
+
+ 	text-align: center;
+ 	font-size:1.6rem;
+ 	i{
+ 		margin-right:2rem;
+ 	}
+ }
