--- a/src/renderer/sass/pages/_ele-style.scss
+++ b/src/renderer/sass/pages/_ele-style.scss
@@ -9,14 +9,28 @@
 	}
 }
 .el-tabs__item{
-	@include height(true, 2.8rem, 2.8rem);
-	margin-top:0.8rem;
+	@include height(true, 3.5rem, 3.5rem);
+	margin-top:0.3rem;
 	font-size:1.6rem;
 	color:#4583c0;
+	border-radius:0.5rem 0.5rem 0 0;
 	&.is-active{
 		background:#fff;
 		color:#303133;
 	}
+}
+.el-tabs--card>.el-tabs__header .el-tabs__item.is-active.is-closable{
+	padding:0 1.5rem;
+}
+.el-tabs--card>.el-tabs__header .el-tabs__item:first-child{
+	margin-left:1.2rem;
+}
+.el-tabs--card>.el-tabs__header .el-tabs__item .el-icon-close{
+	height: 1.8rem;
+	line-height:1.8rem;
+	font-size:1.4rem;
+	// background:#4583c0;
+	// color:#fff;
 }
 .el-table {
 	padding:1.5rem;
