--- a/src/renderer/sass/pages/_ele-style.scss
+++ b/src/renderer/sass/pages/_ele-style.scss
@@ -36,10 +36,12 @@
 	padding:1.5rem;
 	th{
 		// text-align:center;
+		padding-left:1.2rem;
 		background:#eee;
 	}
 	.cell{
-		line-height: 2rem;
+		// line-height: 3rem;
+		padding:1rem 0 1rem 1.2rem;
 	}
 }
 .el-dialog__header{
