--- a/src/renderer/sass/base/_header.scss
+++ b/src/renderer/sass/base/_header.scss
@@ -29,6 +29,7 @@
     padding: 0 1rem;
     line-height: 3rem;
     @extent %textAlign;
+    border-radius:0.5rem 0.5rem 0 0;
     color:#fff;
     font-size:1.5rem;
     a{
