--- a/src/renderer/sass/pages/_ele-style.scss
+++ b/src/renderer/sass/pages/_ele-style.scss
@@ -32,18 +32,9 @@
 	// background:#4583c0;
 	// color:#fff;
 }
-.el-table {
-	padding:1.5rem;
-	th{
-		// text-align:center;
-		padding-left:1.2rem;
-		background:#eee;
-	}
-	.cell{
-		// line-height: 3rem;
-		padding:1rem 0 1rem 1.2rem;
-	}
-}
+
+
+
 .el-dialog__header{
 	padding:1rem 2rem;
 	background:#4583c0;
@@ -73,6 +64,18 @@
 	padding:0 0 1rem;
 }
 
+.el-table{
+	// padding:1.5rem;
+	th{
+		/*  text-align:center; */
+		padding-left:1.2rem;
+		background:#eee;
+	}
+	.cell{
+		/* // line-height: 3rem; */
+		padding:1rem 0 1rem 1.2rem;
+	}
+}
 .el-table td, .el-table th{
 	padding:6px 0;
 }
@@ -86,4 +89,12 @@
 	.el-checkbox + .el-checkbox{
 		margin-left:0;
 	}
+}
+
+.el-tree-node__content{
+	height:35px;
+}
+.el-tree--highlight-current .el-tree-node.is-current>.el-tree-node__content{
+	background:#4294f7;
+	color:#fff;
 }
