--- a/src/renderer/sass/pages/_pages.scss
+++ b/src/renderer/sass/pages/_pages.scss
@@ -199,3 +199,36 @@
  		color:#606266
  	}
  }
+.dsc-table-content{
+	background:#fff;
+	padding:1rem;
+	overflow-x: auto;
+}
+ .dcs-common-table{
+ 	font-size:1.3rem;
+ 	thead{
+ 		th{
+ 			line-height: 2.5rem;
+ 			padding:0.6rem 0 0.6rem;
+ 			padding-left:1rem;
+ 			background:#ebeef5;
+ 			border-bottom:0.1rem solid #f5f7fa;
+ 		}
+ 	}
+ 	tbody{
+ 		tr{
+ 			td{
+		 		line-height: 2.8rem;
+		 		padding:1rem;
+		 		// background:#f5f7fa;
+		 		border-top:0.1rem solid #ebeef5;
+		 		border-left:0.1rem solid #ebeef5;
+		 	}
+		 	&:hover{
+		 			td{
+		 				background:#f5f7fa;
+		 			}
+		 	}
+ 		}
+ 	}
+ }
