--- a/src/renderer/sass/base/_icon.scss
+++ b/src/renderer/sass/base/_icon.scss
@@ -6,7 +6,7 @@
 .icon-logo{
   width:2.1rem;
   height:2rem;
-  margin:0 1.5rem;
+  margin:0 1.2rem 0.4rem 0;
   font-size:3rem;
   background:url(../assets/logo.png) no-repeat center center;
 }
