--- a/src/renderer/sass/pages/_pages.scss
+++ b/src/renderer/sass/pages/_pages.scss
@@ -16,6 +16,7 @@
 }
 .body-content{
 	overflow: hidden;
+	backgorund:#fff;
 }
 
 
@@ -37,10 +38,14 @@
 }
 .left-menu-tree-tool{
 	padding: 10px;
+	@extend %relative;
 	em{
+		@extend %absolute;
+		right:0.5rem;
+		top:1.8rem;
 		color:#fff;
 		font-size:1.8rem;
-		margin-right:1rem;
+		margin:0 1rem 0 0;
 	}
 }
 .el-input-group{
@@ -85,7 +90,7 @@
 	line-height: 3.5rem;
 	margin-bottom:1.5rem;
 	border-bottom:0.1rem solid #4583c0;
-	font-size:1.6rem;
+	font-size:1.4rem;
 	em{
 		margin:0 1.2rem;
 		font-size:1.8rem;
@@ -170,7 +175,7 @@
  	text-align: center;
  	font-size:1.6rem;
  	i{
- 		margin-right:2rem;
+ 		margin-right:1rem;
  	}
  }
 
