--- a/src/renderer/sass/pages/_pages.scss
+++ b/src/renderer/sass/pages/_pages.scss
@@ -218,6 +218,7 @@
  			padding-left:1rem;
  			background:#ebeef5;
  			border-bottom:0.1rem solid #f5f7fa;
+ 			border-left:0.1rem solid #f5f7fa;
  		}
  	}
  	tbody{
